test_pascal/autofix/changvalueconst/test_scope.pas
procedure a();
const
    b = 3;
begin
    b := 4; //error
end;

begin
end.